[package]
name = "cache-fs"
version = "0.1.0"
edition = "2021"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "caching fs to use over immutable network filesystems"
repository  = "https://code.moparisthebest.com/moparisthebest/cache-fs"
keywords    = ["cache", "filesystem", "nfs"]

license = "AGPL-3.0-or-later"
readme = "README.md"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*.md",
]

[dependencies]
#fuse = "0.3"
#fuse = { git = "https://github.com/zargony/fuse-rs" }
fuser = "0.11"
env_logger = "0.6"
libc = "0.2"
log = "0.4"

serde = { version="1.0", features = [ "derive" ] }
bincode = "1.3"
zstd = "0.11"